<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PitchNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TitlePitchNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_paaji"
            android:gravity="center"
            android:text="@string/PitchNote"
            android:textColor="@color/black"
            android:textSize="60sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="369dp"
            android:layout_height="105dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="TODO"
            app:srcCompat="@mipmap/menuimage" />

        <TextView
            android:id="@+id/resposta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/Enunciat"
            android:textColor="@color/black"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/listenButton"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/Listen"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            android:textSize="30sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/aButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/La"
                android:textColor="@color/black"
                app:backgroundTint="@null"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/asButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/LaS"
                android:textColor="@color/black"
                app:backgroundTint="@null"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/bButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/Si"
                android:textColor="@color/black"
                app:backgroundTint="@null"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/cButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/Do"
                android:textColor="@color/black"
                app:backgroundTint="@null"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/csButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/DoS"
                android:textColor="@color/black"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/dButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/Re"
                android:textColor="@color/black"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/dsButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/ReS"
                android:textColor="@color/black"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/eButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/Mi"
                android:textColor="@color/black"
                app:backgroundTint="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/Fa"
                android:textColor="@color/black"
                app:backgroundTint="@null"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/fsButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/FaS"
                android:textColor="@color/black"
                app:backgroundTint="@null"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/gButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/Sol"
                android:textColor="@color/black"
                app:backgroundTint="@null"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/gsButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/SolS"
                android:textColor="@color/black"
                app:backgroundTint="@null"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/closeSessionButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/MenuPrincipal"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>