<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:layout_marginBottom="50dp"
            app:srcCompat="@mipmap/menuimage" />

        <TextView
            android:id="@+id/EmailtextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/email" />

        <TextView
            android:id="@+id/ProviderTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/Proveidor" />

        <Button
            android:id="@+id/abutton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/PitchNote"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/asButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/Referencias"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/closeSessionButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/tanca_sessio"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>